...
    // MARK: - Controller lifecycle

    override func loadView() {
        super.loadView()

        view.backgroundColor = .gray
        view.accessibilityIdentifier = "logoutView"

        let nameLabel = UILabel()
        self.nameLabel = nameLabel

        let usernameLabel = UILabel()
        self.usernameLabel = usernameLabel
...
